--- a/ex6/ex6_spam.ipynb
+++ b/ex6/ex6_spam.ipynb
@@ -16,26 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "==== Processed Email ====\n",
-      "\n",
-      "anyon know how much it cost to host a web portal well it depend on how mani \n",
-      "visitor you re expect thi can be anywher from less than number buck a month \n",
-      "to a coupl of dollarnumb you should checkout httpaddr or perhap amazon ecnumb \n",
-      "if your run someth big to unsubscrib yourself from thi mail list send an \n",
-      "email to emailaddr \n",
-      "\n",
-      "=========================\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "file_contents = readFile('emailSample1.txt');"
    ]
@@ -77,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -94,12 +77,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%word_indices  = processEmail(file_contents);"
+    "a = {'1' '2' '3' '4'};"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lengh(index) 1"
+     ]
+    }
+   ],
+   "source": [
+    "str = '2';\n",
+    "index = find(strcmpi(str, a), 1, 'first');\n",
+    "fprintf('lengh(index) %d', length(index))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n 65, n2 68"
+     ]
+    }
+   ],
+   "source": [
+    "b = 'hola que tal estás\\nestoy muy bien\\nvale\\nok\\n';\n",
+    "n = numel(strsplit(file_contents));\n",
+    "n2 = numel(regexpi(file_contents, '\\w+'));\n",
+    "fprintf('n %d, n2 %d', n, n2);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> Anyone knows how much it costs to host a web portal ?\n",
+      ">\n",
+      "Well, it depends on how many visitors you're expecting.\n",
+      "This can be anywhere from less than 10 bucks a month to a couple of $100. \n",
+      "You should checkout http://www.rackspace.com/ or perhaps Amazon EC2 \n",
+      "if youre running something big..\n",
+      "\n",
+      "To unsubscribe yourself from this mailing list, send an email to:\n",
+      "groupname-unsubscribe@egroups.com\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "disp(file_contents);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocabList = getVocabList();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lengh(index) 1"
+     ]
+    }
+   ],
+   "source": [
+    "str = 'how';\n",
+    "index = find(strcmpi(str, vocabList), 1, 'first');\n",
+    "fprintf('lengh(index) %d', length(index))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
