--- a/ex6/ex6_spam.ipynb
+++ b/ex6/ex6_spam.ipynb
@@ -179,6 +179,126 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 6: Try Your Own Emails"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==== Processed Email ====\n",
+      "\n",
+      "do you want to make dollarnumb or more per week if you ar a motiv and qualifi \n",
+      "individu i will person demonstr to you a system that will make you dollarnumb \n",
+      "number per week or more thi is not mlm call our number hour pre record number \n",
+      "to get the detail number number number i need peopl who want to make seriou \n",
+      "monei make the call and get the fact invest number minut in yourself now \n",
+      "number number number look forward to your call and i will introduc you to \n",
+      "peopl like yourself who ar current make dollarnumb number plu per week number \n",
+      "number number numberljgvnumb numberleannumberlrmsnumb \n",
+      "numberwxhonumberqiytnumb numberrjuvnumberhqcfnumb numbereidbnumberdmtvlnumb \n",
+      "\n",
+      "=========================\n"
+     ]
+    }
+   ],
+   "source": [
+    "filename = 'spamSample1.txt';\n",
+    "file_contents = readFile(filename);\n",
+    "word_indices  = processEmail(file_contents);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ans =\n",
+      "\n",
+      "    471\n",
+      "   1893\n",
+      "   1809\n",
+      "   1699\n",
+      "    997\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "word_indices(1:5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "98\n"
+     ]
+    }
+   ],
+   "source": [
+    "disp(length(word_indices));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "% Total number of words in the dictionary\n",
+    "n = 1899;\n",
+    "% You need to return the following variables correctly.\n",
+    "x = zeros(n, 1);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i = 1:length(word_indices)\n",
+    "    x(word_indices(i)) = 1;\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ans = 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum(x(:) == 1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
