--- a/ex8/ex8_cofi.ipynb
+++ b/ex8/ex8_cofi.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,11 +77,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lambda = 0;\n",
+    "params = [X(:) ; Theta(:)];"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lambda = 0;"
+    "% Unfold the U and W matrices from params\n",
+    "X = reshape(params(1:num_movies*num_features), num_movies, num_features);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Theta = reshape(params(num_movies*num_features+1:end), num_users, num_features);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J 22.224604"
+     ]
+    }
+   ],
+   "source": [
+    "J = sum(sum((R==1) .* ((X * Theta' - Y) .^ 2))) / 2;\n",
+    "fprintf('J %f', J);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 3: Collaborative Filtering Gradient"
    ]
   },
   {
@@ -93,24 +138,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "error: 'params' undefined near line 1, column 1\n",
-      "error: invalid use of 'end': may only be used to index existing value\n"
+      "size(X_grad) 5 3"
      ]
     }
    ],
    "source": [
-    "% Unfold the U and W matrices from params\n",
-    "X = reshape(params(1:num_movies*num_features), num_movies, num_features);\n",
-    "Theta = reshape(params(num_movies*num_features+1:end), num_users, num_features);"
+    "X_grad = (R==1) .* (X * Theta' - Y) * Theta + lambda * X;\n",
+    "fprintf('size(X_grad) %d %d', size(X_grad));"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "size(Theta_grad) 4 3"
+     ]
+    }
+   ],
    "source": [
-    "whos"
+    "Theta_grad = (R==1)' .* (X * Theta' - Y)' * X + lambda * Theta;\n",
+    "fprintf('size(Theta_grad) %d %d', size(Theta_grad));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 4: Collaborative Filtering Cost Regularization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "size(j_reg_term) 1 1"
+     ]
+    }
+   ],
+   "source": [
+    "j_reg_term = lambda * (sum(sum(Theta .^ 2)) + sum(sum(X .^ 2))) / 2;\n",
+    "fprintf('size(j_reg_term) %d %d', size(j_reg_term));"
    ]
   }
  ],
